--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <p>
         • Feels strong the whole way -- feeling strong in Act1 is just "not struggling" to me. <br>
         • As soon as you get Onslaught on kill and Gale force you are ZOOMING. <br>
-        • Update your bow regularly with essences or <a href=https://i.imgur.com/nVozcSV.png>physical recipe</a>. <br>
+        • Update your bow regularly with essences or physical recipe<button onclick="toggleRecipeImage()">Toggle Image</button>.
+        <br>
+        <img id="recipe" class="imgFit" src=./img/recipe.png><br>
     </p>
     <p> <h2> Leveling Skill Trees & Bows</h2>
         Rushing Onslaught on kill <button onclick="toggleTree1Image()">Toggle Image</button>
